# kakidashi

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json  post_create.sh
.github/workflows/: release.yaml
src/: main.rs  models.rs
xtask/: Cargo.toml
xtask/src/: extractor.rs  main.rs  models.rs
