[package]
name = "kakidashi"
version = "0.1.0"
edition = "2024"
description = "A CLI tool that displays the opening sentence of works from Aozora Bunko."
authors = ["ciray"]
license = "MIT"
repository = "https://github.com/ciray/kakidashi"
keywords = ["cli", "aozora", "scraping"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", features = ["blocking"] }
scraper = "0.25"
anyhow = "1"
thiserror = "2"
rand = "0.9.2"
encoding_rs = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
strip = true

[lints.rust]
unsafe_code = "forbid"
future_incompatible = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }

[lints.clippy]
dbg_macro = "warn"
unwrap_used = "warn"
pedantic = { level = "warn", priority = -1 }
