[package]
name = "kakidashi"
version = "0.1.0"
edition = "2024"
description = "A CLI tool that displays the opening sentence of works from Aozora Bunko."
authors = ["ciray"]
license = "MIT"
repository = "https://github.com/ciray/kakidashi"
keywords = ["cli", "aozora", "scraping"]
categories = ["command-line-utilities"]
readme = "README.md"

[workspace]
members = [".", "xtask"]

[dependencies]
csv = "1.4.0"
rand = "0.9.2"

[profile.release]
lto = true
strip = true

[lints.rust]
unsafe_code = "forbid"
future_incompatible = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }

[lints.clippy]
dbg_macro = "warn"
unwrap_used = "warn"
pedantic = { level = "warn", priority = -1 }
