[package]
name = "kakidashi"
version = "0.1.0"
edition = "2024"
description = "Display the opening sentence of works from Aozora Bunko"
authors = ["ciray"]
license = "MIT"
repository = "https://github.com/ciray/kakidashi"
keywords = ["cli", "aozora", "scraping"]
categories = ["command-line-utilities"]
readme = "README.md"

[workspace]
members = [".", "xtask"]

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
csv = "1.4.0"
flate2 = "1.1.8"
inquire = "0.9.2"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.release]
lto = true
strip = true

[lints.rust]
unsafe_code = "forbid"
future_incompatible = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }

[lints.clippy]
dbg_macro = "warn"
unwrap_used = "warn"
pedantic = { level = "warn", priority = -1 }
